--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,8 @@
 name: FFA
-version: 5.0-SNAPSHOT
+version: 9.0-SNAPSHOT
 description: Minecraft pvp freeforall minigame!
 main: com.harry5573.ffa.Main
+softdepend: [Vault, Essentials, mcMMO]
 commands:
   ffa: 
     description: Teleport to FFA
