--- a/src/messages.yml
+++ b/src/messages.yml
@@ -9,3 +9,4 @@ messages:
   thanks: '&dThanks for playing &cFFA&d!'
   prejoin: '&3Your about to join &cFFA &3get ready for battle!'
   oldsave: '&7Your old inventory/items have been saved! You will get them back later!'
+  kitgive: '&3You have been given the kit &eKIT'
