--- a/src/messages.yml
+++ b/src/messages.yml
@@ -5,8 +5,11 @@ messages:
   moneygive: '&a$MONEY &dhas been added to your account.'
   warmup: '&7Joining the &cFFA &7arena in &aTIME &7seconds.'
   broadcastjoin: '&cPLAYER &3has joined &6FFA&3! Go stop him/her! &b/ffa join'
-  broadcastkillstreak: '&dPLAYER &cis on a &3KS &ckillstreak! (/ffa join)'
+  broadcastkillstreak: '&dPLAYER &cis on a &3KS &ckillstreak! &f(&6/ffa join&f)'
   thanks: '&dThanks for playing &cFFA&d!'
   prejoin: '&3Your about to join &cFFA &3get ready for battle!'
   oldsave: '&7Your old inventory/items have been saved! You will get them back later!'
   kitgive: '&3You have been given the kit &eKIT'
+  cashreward: '&bYou earned &d$CASH &bfor being rank &6RANK&b!'
+  kill: '&6DEAD &cwas slaughtered by &3KILLER'
+  notenable: '&8Sorry but the FFA arena is not enabled at this time.'
