--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,13 +25,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/FFA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.bukkit-1.6.1-R0.1-20130703.062218-3.jar=C:\\Users\\Harry5573\\Documents\\Minecraft\\CODING\\LIBS\\bukkit-1.6.1-R0.1-20130703.062218-3.jar
+file.reference.bukkit-1.6.4-R2.1-20131031.000035-1.jar=C:\\Users\\Harry5573\\Documents\\Minecraft\\CODING\\LIBS\\bukkit-1.6.4-R2.1-20131031.000035-1.jar
 file.reference.Vault.jar=C:\\Users\\Harry5573\\Documents\\Minecraft\\CODING\\LIBS\\Vault.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bukkit-1.6.1-R0.1-20130703.062218-3.jar}:\
-    ${file.reference.Vault.jar}
+    ${file.reference.Vault.jar}:\
+    ${file.reference.bukkit-1.6.4-R2.1-20131031.000035-1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
