--- a/src/config.yml
+++ b/src/config.yml
@@ -1,16 +1,19 @@
 # FreeForAll By Harry5573
 # Configuration
-
+#
+# Is the plugin enabled?
+enabled: false
+#
 # The time in seconds before the player gets teleported to the ffa arena
 teleportdelay: 5
-
+#
 # Should we broadcast when
 broadcast:
   join: true
-  
+#
 # SpawnWorld: World that the FFA arena is located in (Auto set on setspawn)
 ffaworld: world
-
+#
 # Spawn: Spawns will be randomly picked from here
 spawns:
   '1':
@@ -18,19 +21,25 @@ spawns:
     y: 4
     z: 1
     yaw: 1
-    
+#    
 # FFA Effect
 effect:
   joinblind: true
   joinsound: true
   killsound: true
-  
+#
 # Scoreboard options
 scoreboard:
   title: '&cFFA Info'
-# 
-# Stuff we should prevemt
-prevent:
-  movearmor:
-  
-  
+#
+# Safety region options
+region:
+  world: world
+  p1:
+    x: 741.0
+    y: 3.0
+    z: 503.0
+  p2:
+    x: 741.0
+    y: 3.0
+    z: 503.0
